<resources>
    <string name="app_name">simadesaV1</string>
    <string name="radio_lakilaki">Laki-laki</string>
    <string name="radio_perempuan">Perempuan</string>
    <string name="radio_kawin">Kawin</string>
    <string name="radio_blmkawin">Belum kawin</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>


    <string name="Home"></string>
    <string name="Trend"></string>
    <string name="Search"></string>
    <string name="Profile"></string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
