<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".penduduk.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/nik_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtnik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Masukan NIK"
                        android:lines="1"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/nama_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtnama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Masukan Nama Lengkap"
                        android:lines="1"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/alamat_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtalamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Masukan Alamat"
                        android:lines="1"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tmpt_lahir_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edttmptlahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Masukan Tempat Lahir"
                        android:lines="1"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tgl_lahir_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edttgllahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="Masukan Tanggal Lahir" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/agama_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtagama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Masukan Agama"
                        android:lines="1"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Jenis Kelamin :" />

                <RadioGroup
                    android:id="@+id/rgJK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radio_lakilaki" />

                    <RadioButton
                        android:id="@+id/rbp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radio_perempuan" />
                </RadioGroup>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Status Perkawinan:" />

                <RadioGroup
                    android:id="@+id/rgStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radio_kawin" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radio_blmkawin" />
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/pekerjaan_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtpekerjaan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Masukan Pekerjaan"
                        android:lines="1"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/kontak_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtkontak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Masukan Kontak"
                        android:lines="1"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/username_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtusername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Masukan Username"
                        android:lines="1"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/pass_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtpass1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Masukan Password"
                        android:lines="1"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/pass2_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtpass2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Masukan Masukan Ulang Password"
                        android:lines="1"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnsimipan"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_garis_putih"
                android:text="Simpan"
                android:textAllCaps="false"
                android:textColor="#fff" />
        </LinearLayout>


    </ScrollView>


</LinearLayout>